# 18335-Final-Project

./: LICENSE  README.txt  build_all.bat  run_all.bat  temp.m
computation/: CMakeLists.txt  Dockerfile
computation/src/: CMakeLists.txt  direct_solver.cpp  fmm_solver.cpp  main.cpp  output_results.cpp  system.cpp
computation/src/include/: declarations.hpp  parameters.hpp  system.hpp
generation/: CMakeLists.txt  Dockerfile
generation/src/: CMakeLists.txt  main.cpp
visualization/: Dockerfile  visualize.py
